# stock_etl_pipeline

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: airflow.cfg
dags/: etl_dag.py
dags/etl/: extract.py  load.py  response.json  test.json  transform.py
src/my_test/: __init__.py  main.py
src/my_test/tests/: test_transform.py
tests/: test_etl.py  test_extract.py  test_load.py
